16 March 2023: Wouter
	- Fix ssl.h include brackets, instead of quotes.

14 March 2023: Wouter
	- Fix unbound-dnstap-socket test program to reply the finish frame
	  over a TLS connection correctly.

23 February 2023: Wouter
	- Fix for #852: Completion of error handling.

21 February 2023: Philip
       - Fix #825: Unexpected behavior with client-subnet-always-forward
         and serve-expired

10 February 2023: George
	- Clean up iterator/iterator.c::error_response_cache() and allow for
	  better interaction with serve-expired, prefetch and cached error
	  responses.

9 February 2023: George
	- Allow TTL refresh of expired error responses.
	- Add testcase for refreshing expired error responses.

9 February 2023: Wouter
	- Fix to ignore entirely empty responses, and try at another authority.
	  This turns completely empty responses, a type of noerror/nodata into
	  a servfail, but they do not conform to RFC2308, and the retry can
	  fetch improved content.
	- Fix unit tests for spurious empty messages.
	- Fix consistency of unit test without roundrobin answers for the
	  cnametooptout unit test.
	- Fix to git ignore the library symbol file that configure can create.

8 February 2023: Wouter
	- Fix #841: Unbound won't build with aaaa-filter-iterator.patch.

30 January 2023: George
	- Add duration variable for speed_local.test.

26 January 2023: Wouter
	- Fix acx_nlnetlabs.m4 for -Wstrict-prototypes.

23 January 2023: George
	- Fix #833: [FR] Ability to set the Redis password.

23 January 2023: Wouter
	- Fix #835: [FR] Ability to use Redis unix sockets.

20 January 2023: Wouter
	- Merge #819: Added new static zone type block_a to suppress all A
	  queries for specific zones.

19 January 2023: Wouter
	- Set max-udp-size default to 1232. This is the same default value as
	  the default value for edns-buffer-size. It restricts client edns
	  buffer size choices, and makes unbound behave similar to other DNS